 . Particles: prevent possible memory corruption when autoRemove is ON (issue #703)
 . Scheduler: Supports repeat-number-of-times in scheduled selectors (issue #630)
 . Sprite: anchor + offset + scale works  (issue #671)
 . Sprite: can create subclasses with an SpriteFrameName (issue #XXX)
 . Sprite: flip works as scale * -1 (issue #690)
 . SpriteFrame: removed support for flipX and flipY  (rollback of a part issue #620)
 . SpriteFrameCache: If originalSize is not present, display warning (issue #670)
 . SpriteSheet: adding grand-children doesn't crash (issue #676)
 . SpriteSheet: child and children works OK with negative scales (issue #677)
 . SpriteSheet: can be overriden (issue #397)
 . Templates: uses rfc1034identifier (issue #685)
 . Texture2D: simulator treats pre-multiplied alpha images correctly (issue #697)
 . TextureCache: doesn't crash when file not found. log error insted (issue #695)
 . TMXTiledMap: added support for object and objectgroup (issue #636)
 . TMXTiledMap: TMXLayer and TMXObjectGroup on it's own files (part of issue #636)
 . TMXTiledMap: doesn't generate descendants when not necessary (works as fast as in v0.8.2)
 . TMXTiledMap: removeChild works without corrupting the tilemap (issue #XXX)
 
version 0.9.0-beta - 14-Dic-2009
 . ActionManager: fixed leak (issue #635)
 . Actions: using [self class]. Easier to subclass (issue #655)
 . Box2d: updated to r31 (pre 2.1.0) (issue #494)
 . Chipmunk: updated to v5.0 (issue #664)
 . CocosDenshion: support for detecting ringer/mute switch state (issue #593)
 . CocosDenshion: doesn't crash when file has no extension (issue #595)
 . ColorLayer: supports Blend Protocol (issue #597)
 . Node: vertexZ is translated just once (issue #641)
 . Director: call schedulers before glClear in mainLoop (part of issue #533)
 . Director: "global" NSBundle to facilitate the integration of more than 1 game (issue #654)
 . Particles: code easier to mantain, same performance