@@ -2,7 +2,7 @@
  *
  * http://www.cocos2d-iphone.org
  *
- * Copyright (C) 2008,2009 Ricardo Quesada
+ * Copyright (C) 2008,2009,2010 Ricardo Quesada
  * Copyright (C) 2009 Valentin Milea
  *
  * This program is free software; you can redistribute it and/or modify
